@@ -8,7 +8,6 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.mockStatic;
@@ -30,12 +29,13 @@ import static se.sundsvall.invoicesender.integration.db.entity.ItemStatus.SENT;
 import static se.sundsvall.invoicesender.integration.db.entity.ItemStatus.UNHANDLED;
 import static se.sundsvall.invoicesender.integration.db.entity.ItemType.INVOICE;
 import static se.sundsvall.invoicesender.integration.db.entity.ItemType.OTHER;
+import static se.sundsvall.invoicesender.service.InvoiceProcessor.ARCHIVE_INDEX_XML;
 
 import java.io.IOException;
-import java.nio.file.FileSystem;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -70,9 +70,6 @@ class InvoiceProcessorTests {
 	private static final String MUNICIPALITY_ID = "2281";
 
 	@Mock
-	private FileSystem mockFileSystem;
-
-	@Mock
 	private CitizenIntegration citizenIntegrationMock;
 
 	@Mock
@@ -95,7 +92,7 @@ class InvoiceProcessorTests {
 
 	@BeforeAll
 	static void setupStaticMock() {
-		final var fileUtilsMock = mockStatic(FileUtils.class);
+		var fileUtilsMock = mockStatic(FileUtils.class);
 		fileUtilsMock.when(() -> FileUtils.deleteDirectory(any())).thenAnswer(invocation -> null);
 	}
 
@@ -108,12 +105,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where item is an invoice.
 	 */
 	@Test
-	void markItems_1() {
-		final var invoiceFilenamePrefixes = Map.of("2281", List.of("faktura"));
+	void markItem_1() {
+		var invoiceFilenamePrefixes = Map.of("2281", List.of("faktura"));
 		ReflectionTestUtils.setField(invoiceProcessor, "invoiceFilenamePrefixes", invoiceFilenamePrefixes);
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("faktura123.pdf"));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("faktura123.pdf"));
 
-		invoiceProcessor.markItems(item, MUNICIPALITY_ID);
+		invoiceProcessor.markItem(item, MUNICIPALITY_ID);
 
 		assertThat(item.getType()).isEqualTo(INVOICE);
 		assertThat(item.getStatus()).isEqualTo(IN_PROGRESS);
@@ -123,12 +120,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where item is an invoice but doesn't follow tha naming convention.
 	 */
 	@Test
-	void markItems_2() {
-		final var invoiceFilenamePrefixes = Map.of(MUNICIPALITY_ID, List.of("faktura"));
+	void markItem_2() {
+		var invoiceFilenamePrefixes = Map.of(MUNICIPALITY_ID, List.of("faktura"));
 		ReflectionTestUtils.setField(invoiceProcessor, "invoiceFilenamePrefixes", invoiceFilenamePrefixes);
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("should-be-ignored.pdf"));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("should-be-ignored.pdf"));
 
-		invoiceProcessor.markItems(item, MUNICIPALITY_ID);
+		invoiceProcessor.markItem(item, MUNICIPALITY_ID);
 
 		assertThat(item.getType()).isEqualTo(INVOICE);
 		assertThat(item.getStatus()).isEqualTo(IGNORED);
@@ -138,10 +135,10 @@ class InvoiceProcessorTests {
 	 * Test scenario where item is not an invoice.
 	 */
 	@Test
-	void markItems_3() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("should-be-ignored.jpeg"));
+	void markItem_3() {
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("should-be-ignored.jpeg"));
 
-		invoiceProcessor.markItems(item, MUNICIPALITY_ID);
+		invoiceProcessor.markItem(item, MUNICIPALITY_ID);
 
 		assertThat(item.getType()).isEqualTo(OTHER);
 		assertThat(item.getStatus()).isEqualTo(IGNORED);
@@ -152,7 +149,7 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void extractItemMetadata_1(@Load("/files/ArchiveIndex.xml") final String xml) {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
 
 		invoiceProcessor.extractItemMetadata(item, xml);
 
@@ -175,7 +172,7 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void extractItemMetadata_2(@Load("/files/ArchiveIndex.xml") final String xml) {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000002_to_9101011234.pdf"));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000002_to_9101011234.pdf"));
 
 		invoiceProcessor.extractItemMetadata(item, xml);
 
@@ -184,8 +181,8 @@ class InvoiceProcessorTests {
 
 	@Test
 	void validateLegalId() {
-		final var item1 = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("9001011234"));
-		final var item2 = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("2104142399"));
+		var item1 = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("9001011234"));
+		var item2 = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("2104142399"));
 
 		invoiceProcessor.validateLegalId(item1);
 		assertThat(item1.getStatus()).isEqualTo(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID);
@@ -197,12 +194,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where recipient have protected identity.
 	 */
 	@Test
-	void markProtectedIdentityItems_1() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("somePartyId"));
-		final var municipalityId = "someMunicipalityId";
+	void markProtectedIdentityItem_1() {
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("somePartyId"));
+		var municipalityId = "someMunicipalityId";
 		when(citizenIntegrationMock.hasProtectedIdentity(item.getRecipientPartyId(), municipalityId)).thenReturn(true);
 
-		invoiceProcessor.markProtectedIdentityItems(item, municipalityId);
+		invoiceProcessor.markProtectedIdentityItem(item, municipalityId);
 
 		assertThat(item.getStatus()).isEqualTo(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID);
 	}
@@ -211,12 +208,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where recipient does not have protected identity.
 	 */
 	@Test
-	void markProtectedIdentityItems_2() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("somePartyId"));
-		final var municipalityId = "someMunicipalityId";
+	void markProtectedIdentityItem_2() {
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("somePartyId"));
+		var municipalityId = "someMunicipalityId";
 		when(citizenIntegrationMock.hasProtectedIdentity(item.getRecipientPartyId(), municipalityId)).thenReturn(false);
 
-		invoiceProcessor.markProtectedIdentityItems(item, municipalityId);
+		invoiceProcessor.markProtectedIdentityItem(item, municipalityId);
 
 		assertThat(item.getStatus()).isEqualTo(UNHANDLED);
 	}
@@ -225,11 +222,11 @@ class InvoiceProcessorTests {
 	 * Test scenario where recipient party id is found.
 	 */
 	@Test
-	void fetchInvoiceRecipientPartyIds_1() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("202104142399"));
+	void fetchInvoiceRecipientPartyId_1() {
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("202104142399"));
 		when(partyIntegrationMock.getPartyId(item.getRecipientLegalId(), MUNICIPALITY_ID)).thenReturn(Optional.of(new LegalIdAndPartyId("1234", "5678")));
 
-		invoiceProcessor.fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
+		invoiceProcessor.fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
 
 		assertThat(item.getRecipientLegalId()).isEqualTo("1234");
 		assertThat(item.getRecipientPartyId()).isEqualTo("5678");
@@ -240,11 +237,11 @@ class InvoiceProcessorTests {
 	 * Test scenario where recipient party id is not found.
 	 */
 	@Test
-	void fetchInvoiceRecipientPartyIds_2() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("202104142399"));
+	void fetchInvoiceRecipientPartyId_2() {
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientLegalId("202104142399"));
 		when(partyIntegrationMock.getPartyId(item.getRecipientLegalId(), MUNICIPALITY_ID)).thenReturn(Optional.empty());
 
-		invoiceProcessor.fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
+		invoiceProcessor.fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
 
 		assertThat(item.getStatus()).isEqualTo(RECIPIENT_PARTY_ID_NOT_FOUND);
 	}
@@ -253,12 +250,12 @@ class InvoiceProcessorTests {
 	 * Test scenario where invoice is sent.
 	 */
 	@Test
-	void sendDigitalInvoices_1() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("1234"));
-		final var localPath = "any/path/";
-		when(messagingIntegrationMock.sendInvoice(localPath, item, MUNICIPALITY_ID)).thenReturn(SENT);
+	void sendDigitalInvoice_1() {
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("1234"));
 
-		invoiceProcessor.sendDigitalInvoices(item, localPath, MUNICIPALITY_ID);
+		when(messagingIntegrationMock.sendInvoice(MUNICIPALITY_ID, item)).thenReturn(SENT);
+
+		invoiceProcessor.sendDigitalInvoice(MUNICIPALITY_ID, item);
 
 		assertThat(item.getStatus()).isEqualTo(SENT);
 	}
@@ -267,19 +264,19 @@ class InvoiceProcessorTests {
 	 * Test scenario where invoice is not sent.
 	 */
 	@Test
-	void sendDigitalInvoices_2() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("1234"));
-		final var localPath = "any/path/";
-		when(messagingIntegrationMock.sendInvoice(localPath, item, MUNICIPALITY_ID)).thenReturn(NOT_SENT);
+	void sendDigitalInvoice_2() {
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setRecipientPartyId("1234"));
 
-		invoiceProcessor.sendDigitalInvoices(item, localPath, MUNICIPALITY_ID);
+		when(messagingIntegrationMock.sendInvoice(MUNICIPALITY_ID, item)).thenReturn(NOT_SENT);
+
+		invoiceProcessor.sendDigitalInvoice(MUNICIPALITY_ID, item);
 
 		assertThat(item.getStatus()).isEqualTo(NOT_SENT);
 	}
 
 	@Test
 	void extractInvoiceRecipientLegalId_1() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
 
 		invoiceProcessor.extractInvoiceRecipientLegalId(item);
 
@@ -289,7 +286,7 @@ class InvoiceProcessorTests {
 
 	@Test
 	void extractInvoiceRecipientLegalId_2() {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_.pdf"));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_.pdf"));
 
 		invoiceProcessor.extractInvoiceRecipientLegalId(item);
 
@@ -298,8 +295,8 @@ class InvoiceProcessorTests {
 
 	@Test
 	void updateAndPersistBatch() {
-		final var batch = createBatchEntity();
-		final var items = List.of(
+		var batch = createBatchEntity();
+		var items = List.of(
 			createItemEntity(itemBeingModified -> itemBeingModified.setStatus(SENT)),
 			createItemEntity(itemBeingModified -> itemBeingModified.setStatus(IGNORED)));
 		batch.setItems(items);
@@ -320,22 +317,23 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_1() throws IOException {
-		final var item = createItemEntity();
-		final var invoiceProcessorSpy = spy(invoiceProcessor);
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2));
+		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		doAnswer(updateItem(IGNORED)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(IGNORED)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
 		verify(invoiceProcessorSpy, never()).extractItemMetadata(any(), any());
 		verify(invoiceProcessorSpy, never()).extractInvoiceRecipientLegalId(any());
 		verify(invoiceProcessorSpy, never()).validateLegalId(any());
-		verify(invoiceProcessorSpy, never()).markProtectedIdentityItems(any(), eq(MUNICIPALITY_ID));
-		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyIds(any(), any());
-		verify(invoiceProcessorSpy, never()).sendDigitalInvoices(any(), any(), any());
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(any(), eq(MUNICIPALITY_ID));
+		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyId(any(), any());
+		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
 
@@ -344,22 +342,24 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_2() throws IOException {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
-		final var invoiceProessorSpy = spy(invoiceProcessor);
-		runMethodCommonStubs(item, invoiceProessorSpy);
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(updateItem(METADATA_INCOMPLETE)).when(invoiceProessorSpy).extractItemMetadata(item, "mocked-string");
+		var invoiceProcessorSpy = spy(invoiceProcessor);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		invoiceProessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(METADATA_INCOMPLETE)).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 
-		verify(invoiceProessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProessorSpy).extractItemMetadata(item, "mocked-string");
-		verify(invoiceProessorSpy, never()).extractInvoiceRecipientLegalId(any());
-		verify(invoiceProessorSpy, never()).validateLegalId(any());
-		verify(invoiceProessorSpy, never()).markProtectedIdentityItems(any(), eq(MUNICIPALITY_ID));
-		verify(invoiceProessorSpy, never()).fetchInvoiceRecipientPartyIds(any(), any());
-		verify(invoiceProessorSpy, never()).sendDigitalInvoices(any(), any(), any());
+		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
+
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
+		verify(invoiceProcessorSpy, never()).extractInvoiceRecipientLegalId(any());
+		verify(invoiceProcessorSpy, never()).validateLegalId(any());
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(any(), eq(MUNICIPALITY_ID));
+		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyId(any(), any());
+		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
 
@@ -368,24 +368,25 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_3() throws IOException {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
-		final var invoiceProcessorSpy = spy(invoiceProcessor);
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
+		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy, never()).validateLegalId(any());
-		verify(invoiceProcessorSpy, never()).markProtectedIdentityItems(any(), eq(MUNICIPALITY_ID));
-		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyIds(any(), any());
-		verify(invoiceProcessorSpy, never()).sendDigitalInvoices(any(), any(), any());
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(any(), eq(MUNICIPALITY_ID));
+		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyId(any(), any());
+		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
 
@@ -394,25 +395,26 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_4() throws IOException {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
-		final var invoiceProcessorSpy = spy(invoiceProcessor);
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
+		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_FOUND)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID)).when(invoiceProcessorSpy).validateLegalId(item);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy).validateLegalId(item);
-		verify(invoiceProcessorSpy, never()).markProtectedIdentityItems(any(), eq(MUNICIPALITY_ID));
-		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyIds(any(), any());
-		verify(invoiceProcessorSpy, never()).sendDigitalInvoices(any(), any(), any());
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(any(), eq(MUNICIPALITY_ID));
+		verify(invoiceProcessorSpy, never()).fetchInvoiceRecipientPartyId(any(), any());
+		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
 
@@ -421,27 +423,28 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_5() throws IOException {
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
+		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
-		final var invoiceProcessorSpy = spy(invoiceProcessor);
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_FOUND)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).validateLegalId(item);
-		doAnswer(updateItem(RECIPIENT_PARTY_ID_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
-		doAnswer(updateItem(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID)).when(invoiceProcessorSpy).markProtectedIdentityItems(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(RECIPIENT_PARTY_ID_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(RECIPIENT_LEGAL_ID_NOT_FOUND_OR_INVALID)).when(invoiceProcessorSpy).markProtectedIdentityItem(item, MUNICIPALITY_ID);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy).validateLegalId(item);
-		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(any(), any());
-		verify(invoiceProcessorSpy).markProtectedIdentityItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy, never()).sendDigitalInvoices(any(), any(), any());
+		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(any(), any());
+		verify(invoiceProcessorSpy).markProtectedIdentityItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
 
@@ -450,25 +453,27 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_6() throws IOException {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
-		final var invoiceProcessorSpy = spy(invoiceProcessor);
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
+		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
+
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_FOUND)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).validateLegalId(item);
-		doAnswer(updateItem(RECIPIENT_PARTY_ID_NOT_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(RECIPIENT_PARTY_ID_NOT_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy).validateLegalId(item);
-		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy, never()).markProtectedIdentityItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy, never()).sendDigitalInvoices(any(), any(), any());
+		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy, never()).markProtectedIdentityItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy, never()).sendDigitalInvoice(any(), any());
 		verify(dbIntegrationMock).persistItem(item);
 	}
 
@@ -477,27 +482,29 @@ class InvoiceProcessorTests {
 	 */
 	@Test
 	void run_7() throws IOException {
-		final var item = createItemEntity(itemBeingModified -> itemBeingModified.setFilename("Faktura_00000001_to_9001011234.pdf"));
-		final var invoiceProcessorSpy = spy(invoiceProcessor);
-		runMethodCommonStubs(item, invoiceProcessorSpy);
+		var archiveIndexItem = createItemEntity(itemBeingModified -> itemBeingModified.withId(1).withFilename(ARCHIVE_INDEX_XML));
+		var item = createItemEntity(itemBeingModified -> itemBeingModified.withId(2).withFilename("Faktura_00000001_to_9001011234.pdf"));
+		var invoiceProcessorSpy = spy(invoiceProcessor);
 
-		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		setupCommonStubs(invoiceProcessorSpy, archiveIndexItem, item);
+
+		doAnswer(updateItem(INVOICE, IN_PROGRESS)).when(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		doAnswer(updateItem(RECIPIENT_LEGAL_ID_FOUND)).when(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).validateLegalId(item);
-		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).markProtectedIdentityItems(item, MUNICIPALITY_ID);
-		doAnswer(updateItem(RECIPIENT_PARTY_ID_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
-		doAnswer(updateItem(NOT_SENT)).when(invoiceProcessorSpy).sendDigitalInvoices(item, "mocked-path", MUNICIPALITY_ID);
+		doAnswer(doNotUpdate()).when(invoiceProcessorSpy).markProtectedIdentityItem(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(RECIPIENT_PARTY_ID_FOUND)).when(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
+		doAnswer(updateItem(NOT_SENT)).when(invoiceProcessorSpy).sendDigitalInvoice(MUNICIPALITY_ID, item);
 
 		invoiceProcessorSpy.run(LocalDate.now(), MUNICIPALITY_ID, "BatchName");
 
-		verify(invoiceProcessorSpy).markItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).extractItemMetadata(item, "mocked-string");
+		verify(invoiceProcessorSpy).markItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).extractItemMetadata(item, "someData");
 		verify(invoiceProcessorSpy).extractInvoiceRecipientLegalId(item);
 		verify(invoiceProcessorSpy).validateLegalId(item);
-		verify(invoiceProcessorSpy).markProtectedIdentityItems(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyIds(item, MUNICIPALITY_ID);
-		verify(invoiceProcessorSpy).sendDigitalInvoices(item, "mocked-path", MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).markProtectedIdentityItem(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).fetchInvoiceRecipientPartyId(item, MUNICIPALITY_ID);
+		verify(invoiceProcessorSpy).sendDigitalInvoice(MUNICIPALITY_ID, item);
 		verify(dbIntegrationMock).persistItem(item);
 	}
 
@@ -506,9 +513,10 @@ class InvoiceProcessorTests {
 	 */
 	private Answer<ItemEntity> updateItem(final ItemType type, final ItemStatus status) {
 		return invocation -> {
-			final var invocationArgument = (ItemEntity) invocation.getArgument(0);
-			ofNullable(type).ifPresent(invocationArgument::setType);
-			ofNullable(status).ifPresent(invocationArgument::setStatus);
+			if (invocation.getArgument(0) instanceof ItemEntity itemEntity) {
+				ofNullable(type).ifPresent(itemEntity::setType);
+				ofNullable(status).ifPresent(itemEntity::setStatus);
+			}
 			return null;
 		};
 	}
@@ -530,22 +538,21 @@ class InvoiceProcessorTests {
 	/**
 	 * Common stubs for the run(LocalDate, String, String) method tests
 	 */
-	private void runMethodCommonStubs(final ItemEntity item, final InvoiceProcessor invoiceProcessor) throws IOException {
-		final var date = LocalDate.now();
-		final var batch = createBatchEntity(batchBeingModified -> batchBeingModified.setLocalPath("mocked-path")).withItems(List.of(item));
-		final var batches = List.of(batch);
+	private void setupCommonStubs(final InvoiceProcessor invoiceProcessor, final ItemEntity... items) throws IOException {
+		var date = LocalDate.now();
+		var batch = createBatchEntity(batchBeingModified -> batchBeingModified.withItems(Arrays.asList(items)));
+		var batches = List.of(batch);
 
-		final var raindanceIntegration = mock(RaindanceIntegration.class);
-		final var raindanceIntegrations = Map.of(MUNICIPALITY_ID, raindanceIntegration);
+		var raindanceIntegration = mock(RaindanceIntegration.class);
+		var raindanceIntegrations = Map.of(MUNICIPALITY_ID, raindanceIntegration);
 		ReflectionTestUtils.setField(invoiceProcessor, "raindanceIntegrations", raindanceIntegrations);
 
 		when(raindanceIntegration.readBatches(date, "BatchName", "2281")).thenReturn(batches);
-		doReturn("mocked-string").when(invoiceProcessor).mapXmlFileToString(anyString());
 		when(dbIntegrationMock.persistBatches(batches)).thenReturn(batches);
 		doNothing().when(raindanceIntegration).writeBatch(batch);
 		doNothing().when(raindanceIntegration).archiveOriginalBatch(batch);
 		doNothing().when(invoiceProcessor).updateAndPersistBatch(batch);
-		lenient().doReturn("mocked-string").when(invoiceProcessor).removeItemFromArchiveIndex(item, "mocked-string", "mocked-path");
+		lenient().doReturn("mocked-string").when(invoiceProcessor).removeItemFromArchiveIndex(any(ItemEntity.class), anyString());
 		doNothing().when(messagingIntegrationMock).sendStatusReport(batches, date, MUNICIPALITY_ID);
 	}
 }
